[tool.poetry]
name = "pylint-django"
version = "2.6.0a0"
readme = "README.rst"
description = "A Pylint plugin to help Pylint understand the Django web framework"
repository = "https://github.com/PyCQA/pylint-django"
authors = ["Carl Crowder <git@carlcrowder.com>"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]
keywords=["pylint", "django", "plugin"]
packages = [
  { include = "pylint_django/"}
]
include = [
  "LICENSE",
  "*.rst",
  "*.md"
]
exclude = ["**/tests/**", "**/testutils.py", "**/tests.py"]

[tool.poetry.dependencies]
python = ">=3.6"
pylint-plugin-utils = ">=0.7"
pylint = ">=2.0"
Django = {version=">=2.2", optional = true}
django-tables2 = {version="^2.4.1", optional = true}
factory-boy = {version="^3.2.1", optional = true}
django-tastypie = {version="^0.14.5", optional = true}

[tool.poetry.extras]
with_django = ["Django"]
for_tests = ['django-tastypie', 'django-tables2', 'factory-boy']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
